fix: enhance touch event handling on safari

--- a/src/editor/nodes/ImageNode/index.css
+++ b/src/editor/nodes/ImageNode/index.css
@@ -65,6 +65,7 @@
 
 .LexicalTheme__image .image-resizer {
   position: absolute;
+  touch-action: none;
   padding: 0;
   color: rgb(95 183 255 / 75%) !important;
 }
