--- a/src/editor/plugins/TablePlugin/index.css
+++ b/src/editor/plugins/TablePlugin/index.css
@@ -9,6 +9,7 @@
 
 .TableCellResizer__resizer {
   position: absolute;
+  touch-action: none;
   z-index: 1;
 }
 
